--- a/LiveData_ViewModel/app/build.gradle
+++ b/LiveData_ViewModel/app/build.gradle
@@ -29,6 +29,10 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+    buildFeatures {
+        viewBinding = true
+    }
 }
 
 dependencies {
@@ -41,4 +45,6 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.0-alpha04")  // 뷰모델 - Life Cycel 관련
+    implementation("androidx.lifecycle:lifecycle-livedata-ktx:2.5.0-alpha04")  // 라이브데이터 - Observer 패턴 관련(즉, 데이터의 변경 사항을 알 수 있음)
 }
